syntax = "proto3";

package ekstep.speech_recognition;

option java_multiple_files = true;
option java_outer_classname = "SpeechRecognitionProto";
option java_package = "com.ekstep.endpoints.speech_recognition";

import "google/api/annotations.proto";

service SpeechRecognizer {
  rpc recognize (RecognitionInput) returns (RecognitionOutput) {
    option (google.api.http) = { get: "/v1/recognize" };
  }
}

message RecognitionInput {
  optional string audio_url = 1;
  optional bytes audio_bytes = 2;
  optional string file_name = 3;
  string language = 4;
}

message RecognitionOutput {
  string result = 1;
}
